sprite sheets in spritesheet file

--- a/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj
+++ b/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj
@@ -243,6 +243,10 @@
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="XInput.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\Pictures\2020-09\NinjaSpriteSheets.png" />
+    <Image Include="..\..\..\..\..\Pictures\2020-09\NinjaSpriteSheetsLeft.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
