--- a/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj.filters
+++ b/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj.filters
@@ -333,4 +333,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\..\..\..\..\Pictures\2020-09\NinjaSpriteSheets.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\..\..\..\..\Pictures\2020-09\NinjaSpriteSheetsLeft.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
