made json show in project

--- a/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj.filters
+++ b/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj.filters
@@ -355,5 +355,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\sprites\Ninjas.json" />
+    <None Include="assets\sprites\NinjaSpriteSheets.json" />
   </ItemGroup>
 </Project>
