--- a/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj
+++ b/SpriteLib3.0-v2.0/SpriteLib3.0-v2.0.vcxproj
@@ -253,6 +253,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="assets\sprites\Ninjas.json" />
+    <None Include="assets\sprites\NinjaSpriteSheets.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
